--- a/src/components/TyHeading.astro
+++ b/src/components/TyHeading.astro
@@ -7,19 +7,19 @@ export interface Props {
 const { type = "section", text } = Astro.props;
 ---
 
-{type === "page" && <h1 class:list={["heading heading--page"]}>{text}</h1>}
+{type === "page" && <h1 class:list={["ty-heading ty-heading--page"]}>{text}</h1>}
 
 {
   type === "section" && (
-    <h2 class:list={["heading heading--section"]}>{text}</h2>
+    <h2 class:list={["ty-heading ty-heading--section"]}>{text}</h2>
   )
 }
 
-{type === "block" && <h3 class:list={["heading heading--block"]}>{text}</h3>}
+{type === "block" && <h3 class:list={["ty-heading ty-heading--block"]}>{text}</h3>}
 
 {
   type === "sub-block" && (
-    <h4 class:list={["heading heading--sub-block"]}>
+    <h4 class:list={["ty-heading ty-heading--sub-block"]}>
       {text}
       <slot />
     </h4>
@@ -28,7 +28,7 @@ const { type = "section", text } = Astro.props;
 
 {
   type === "sub-sub-block" && (
-    <h5 class:list={["heading heading--sub-sub-block"]}>
+    <h5 class:list={["ty-heading ty-heading--sub-sub-block"]}>
       {text}
       <slot />
     </h5>
@@ -36,7 +36,7 @@ const { type = "section", text } = Astro.props;
 }
 
 <style lang="scss">
-  .heading {
+  .ty-heading {
     &--page {
       font-size: map-get($font-size, xl);
       color: $color-primary;
