--- a/src/components/TyWork.astro
+++ b/src/components/TyWork.astro
@@ -1,6 +1,7 @@
 ---
-import Information from "@/components/Information.astro";
-import Text from "@/components/Text.astro";
+import TyInformation from "@/components/TyInformation.astro";
+import TyText from "@/components/TyText.astro";
+import { Image } from 'astro:assets';
 
 export interface Props {
   image: string;
@@ -13,21 +14,21 @@ export interface Props {
 const { image, href, title, role, comment } = Astro.props;
 ---
 
-<li class="work">
-  <a class="work__anchor" href={href} target="_blank">
-    <div class="work__image">
-      <img src={image} alt={title} />
+<li class=ty-work">
+  <a class="ty-work__anchor" href={href} target="_blank">
+    <div class="ty-work__image">
+      <Image src={image} alt={title} width="450" height="225"/>
     </div>
   </a>
 
-  <div class="work__info">
-    <Information title={title} subTitle={role} href={href} />
-    <Text size="md">{comment}</Text>
+  <div class="ty-work__info">
+    <TyInformation title={title} subTitle={role} href={href} />
+    <TyText size="md">{comment}</Text>
   </div>
 </li>
 
 <style lang="scss">
-  .work {
+  .ty-work {
     &__anchor {
       position: relative;
     }
