--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,57 +1,54 @@
 ---
-import Text from "@/components/Text.astro";
-import Block from "@/layouts/Block.astro";
-import Layout from "@/layouts/Layout.astro";
-import Section from "@/layouts/Section.astro";
+import TyText from "@/components/TyText.astro";
+import TyBlock from "@/layouts/TyBlock.astro";
+import TyLayout from "@/layouts/TyLayout.astro";
+import TySection from "@/layouts/TySection.astro";
 import TyDiv from "@/layouts/TyDiv.astro";
 ---
 
-<Layout title="" currentPage="top" headingPage="Top">
-  <Section
+<TyLayout title="" currentPage="top" headingPage="Top">
+  <TySection
     heading="私について"
     isMaxWidth
   >
-  <Block heading="はじめまして、柳沼 亨 (ヤギヌマトオル)と申します。" layout="stack">
-    <Text size="md">
+  <TyBlock heading="はじめまして、柳沼 亨 (ヤギヌマトオル)と申します。" layout="stack">
+    <TyText size="md">
       私はウェブ開発者として約5年間、受託のウェブ制作・開発会社で開発経験を積んできました。
-    </Text>
-    <Text size="md">
+    </TyText>
+    <TyText size="md">
       フルスタック開発者としてプロジェクトに関わっていくことを好んでいますが、中でもユーザーとAPIを繋ぐ責務を請け負う、フロントエンド領域での開発を最も好んでおり、デザイナーと協力してつくる美しいUI画面の開発や、再利用しやすいコンポーネント、ロジックの設計・開発を行うことに情熱を持っています。また、Laravelを用いたバックエンド開発や、前職のネットワークエンジニアとしての経験を活かしたAWS中心としたインフラ構築などの実装も行い、プロジェクト毎に様々な経験を積んできました。
-    </Text>
-    <Text size="md">
+    </TyText>
+    <TyText size="md">
       私の特徴を3点挙げさせていただくと、以下になります。
-    </Text>
+    </TyText>
     <TyDiv>
-      <Text size="md" isBold>
+      <TyText size="md" isBold>
         好奇心が強く主体性があります。
-      </Text>
-      <Text size="md">
+      </TyText>
+      <TyText size="md">
         未知、未体験の事柄を知ったり体験することが好きで、日々勉強や活動を続けています。
-      </Text>
-      <Text size="md">
+      </TyText>
+      <TyText size="md">
         私は最初のキャリアとして音楽業界で活動を行っておりましたが、ウェブデベロッパーへ転身しフロントエンドを中心にフルスタックな開発経験を積んでいる実績がございます。
-      </Text>
+      </TyText>
     </TyDiv>
     <TyDiv>
-      <Text size="md" isBold>
+      <TyText size="md" isBold>
         優先順位を立てるのが得意です。
-      </Text>
-      <Text size="md">
+      </TyText>
+      <TyText size="md">
         得にやらない事の選別に力を入れており、得意な事に時間を費やすことで、パフォーマンスを上げられるようにしています。やらないことを選別することは、自分のやるべきことの土壌づくりであると考えています。
-      </Text>
+      </TyText>
     </TyDiv>
     <TyDiv>
-      <Text size="md" isBold>
+      <TyText size="md" isBold>
         コミュニケーションにおいて強い表現を避けます。
-      </Text>
-      <Text size="md">
+      </TyText>
+      <TyText size="md">
         文字ベースのコミュニケーションは冷たい印象になりがちだと考えています。そのため、できるだけ、シンプルかつ柔らかい表現を心がけています。また必要あれば、発言の背景なども付け加えるようにし、誤解をできるだけ避けるようにしています。
-      </Text>
+      </TyText>
     </TyDiv>
-    <Text size="md">よろしくお願いいたします🙇‍♂️</Text>
-  </Block>
-
-
-
-  </Section>
-</Layout>
+    <TyText size="md">よろしくお願いいたします🙇‍♂️</TyText>
+  </TyBlock>
+  </TySection>
+</TyLayout>
