--- a/src/pages/ja/contact/index.astro
+++ b/src/pages/ja/contact/index.astro
@@ -6,14 +6,14 @@ import TyLayout from "@/layouts/TyLayout.astro";
 import TySection from "@/layouts/TySection.astro";
 ---
 
-<TyLayout title="Contact" currentPage="contact" headingPage="Contact" lang="en">
-  <TySection heading="Contact and Social media">
-    <TyBlock heading="Mail Address" layout="stack">
+<TyLayout title="Contact" currentPage="contact" headingPage="Contact" lang="ja">
+  <TySection heading="連絡先やSNSアカウント一覧">
+    <TyBlock heading="メールアドレス" layout="stack">
       <TyText size="md">
         <TyTextLink href="mailto:toru45s@gmail.com">toru45s@gmail.com</TyTextLink>
       </Text>
     </TyBlock>
-    <TyBlock heading="Social media" layout="stack">
+    <TyBlock heading="SNS" layout="stack">
       <TyTextLink href="https://github.com/t-yaginuma">github</TyTextLink>
       <TyTextLink href="https://www.linkedin.com/in/toru-yaginuma-8124a8277/">linkedin</TyTextLink>
     </TyBlock>
