--- a/src/pages/works/index.astro
+++ b/src/pages/works/index.astro
@@ -6,12 +6,12 @@ import TyText from "@/components/TyText.astro";
 import TyDiv from "@/layouts/TyDiv.astro";
 ---
 
-<TyLayout title="Works" currentPage="works" headingPage="Works">
-  <TySection heading="実装を担当したWebサイト">
+<TyLayout title="Works" currentPage="works" headingPage="Works" lang="en">
+  <TySection heading="Works">
     <TyDiv>
-      <TyText size="md">公開可能な実績のみ掲載しております。</TyText>
-      <TyText size="md">非公開案件などの実績は、別途スキルシートをご確認いただけますと幸いです。</TyText>
-      <TyText size="md">なおスキルシートへリンクは、本サイトに掲載しておりません。</TyText>
+      <TyText size="md">Only publicly available achievements are listed here.</TyText>
+      <TyText size="md">For accomplishments related to private projects, please refer to the skill sheet.</TyText>
+      <TyText size="md">Please note that the link to the skill sheet is not provided on this website.</TyText>
     </TyDiv>
     <TyWorks />
   </TySection>
