--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,49 +6,49 @@ import TySection from "@/layouts/TySection.astro";
 import TyDiv from "@/layouts/TyDiv.astro";
 ---
 
-<TyLayout title="" currentPage="top" headingPage="Top">
+<TyLayout title="" currentPage="top" headingPage="Top" lang="en">
   <TySection
-    heading="私について"
+    heading="About"
     isMaxWidth
   >
-  <TyBlock heading="はじめまして、柳沼 亨 (ヤギヌマトオル)と申します。" layout="stack">
+  <TyBlock heading="Nice to meet you. My name is Tohru Yaginuma." layout="stack">
     <TyText size="md">
-      私はウェブ開発者として約5年間、受託のウェブ制作・開発会社で開発経験を積んできました。
+      I have about five years of experience in web development, working at a web production and development company on a contract basis.
     </TyText>
     <TyText size="md">
-      フルスタック開発者としてプロジェクトに関わっていくことを好んでいますが、中でもユーザーとAPIを繋ぐ責務を請け負う、フロントエンド領域での開発を最も好んでおり、デザイナーと協力してつくる美しいUI画面の開発や、再利用しやすいコンポーネント、ロジックの設計・開発を行うことに情熱を持っています。また、Laravelを用いたバックエンド開発や、前職のネットワークエンジニアとしての経験を活かしたAWS中心としたインフラ構築などの実装も行い、プロジェクト毎に様々な経験を積んできました。
+      While I enjoy contributing to projects as a full-stack developer, my greatest passion lies in front-end development, where I take on the responsibility of connecting users with APIs. I particularly enjoy collaborating with designers to create beautiful UI interfaces, as well as designing and developing reusable components and logic. In addition, I have experience in back-end development using Laravel and infrastructure building centered on AWS, leveraging my previous experience as a network engineer. These opportunities have allowed me to gain a wide range of expertise across different projects.
     </TyText>
     <TyText size="md">
-      私の特徴を3点挙げさせていただくと、以下になります。
+      Here are three traits that define me:
     </TyText>
     <TyDiv>
       <TyText size="md" isBold>
-        好奇心が強く主体性があります。
+        I am highly curious and take initiative.
       </TyText>
       <TyText size="md">
-        未知、未体験の事柄を知ったり体験することが好きで、日々勉強や活動を続けています。
+        I enjoy exploring and experiencing new, unfamiliar things, which drives me to continually study and engage in activities every day.
       </TyText>
       <TyText size="md">
-        私は最初のキャリアとして音楽業界で活動を行っておりましたが、ウェブデベロッパーへ転身しフロントエンドを中心にフルスタックな開発経験を積んでいる実績がございます。
+        I initially began my career in the music industry but transitioned to becoming a web developer, where I have built full-stack development experience, focusing mainly on the front-end.
       </TyText>
     </TyDiv>
     <TyDiv>
       <TyText size="md" isBold>
-        優先順位を立てるのが得意です。
+        I am skilled at prioritizing tasks.
       </TyText>
       <TyText size="md">
-        得にやらない事の選別に力を入れており、得意な事に時間を費やすことで、パフォーマンスを上げられるようにしています。やらないことを選別することは、自分のやるべきことの土壌づくりであると考えています。
+        I place a strong emphasis on deciding what not to do, allowing me to focus on my strengths and dedicate time to them, ultimately enhancing my performance. I believe that choosing not to do certain tasks creates a foundation for focusing on the essential ones.
       </TyText>
     </TyDiv>
     <TyDiv>
       <TyText size="md" isBold>
-        コミュニケーションにおいて強い表現を避けます。
+        I avoid using overly strong expressions in communication.
       </TyText>
       <TyText size="md">
-        文字ベースのコミュニケーションは冷たい印象になりがちだと考えています。そのため、できるだけ、シンプルかつ柔らかい表現を心がけています。また必要あれば、発言の背景なども付け加えるようにし、誤解をできるだけ避けるようにしています。
+        I believe text-based communication can often come across as cold or harsh. Therefore, I strive to keep my expressions simple yet soft. When necessary, I also provide context or background to my statements to minimize misunderstandings.
       </TyText>
     </TyDiv>
-    <TyText size="md">よろしくお願いいたします🙇‍♂️</TyText>
+    <TyText size="md">Thank you for your time and consideration!🙇‍♂️</TyText>
   </TyBlock>
   </TySection>
 </TyLayout>
