update css class

--- a/src/components/TyTextLink.astro
+++ b/src/components/TyTextLink.astro
@@ -37,7 +37,7 @@ const isExternal = href?.indexOf("http") !== -1;
     font-weight: map-get($font-weight, thin);
 
     &:hover {
-      .text-link {
+      .ty-text-link {
         &__content {
           &::after {
             width: 100%;
