--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,48 +7,62 @@ import TyDiv from "@/layouts/TyDiv.astro";
 ---
 
 <TyLayout title="" currentPage="top" headingPage="Top" lang="en">
-  <TySection
-    heading="About"
-    isMaxWidth
-  >
-  <TyBlock heading="Nice to meet you. My name is Tohru Yaginuma." layout="stack">
-    <TyText size="md">
-      I have about five years of experience in web development, working at a web production and development company on a contract basis.
-    </TyText>
-    <TyText size="md">
-      While I enjoy contributing to projects as a full-stack developer, my greatest passion lies in front-end development, where I take on the responsibility of connecting users with APIs. I particularly enjoy collaborating with designers to create beautiful UI interfaces, as well as designing and developing reusable components and logic. In addition, I have experience in back-end development using Laravel and infrastructure building centered on AWS, leveraging my previous experience as a network engineer. These opportunities have allowed me to gain a wide range of expertise across different projects.
-    </TyText>
-    <TyText size="md">
-      Here are three traits that define me:
-    </TyText>
-    <TyDiv>
-      <TyText size="md" isBold>
-        I am highly curious and take initiative.
+  <TySection heading="About" isMaxWidth>
+    <TyBlock
+      heading="Nice to meet you. My name is Tohru Yaginuma."
+      layout="stack"
+    >
+      <TyText size="md">
+        I have about five years of experience in web development, working at a
+        web production and development company on a contract basis.
       </TyText>
       <TyText size="md">
-        I enjoy exploring and experiencing new, unfamiliar things, which drives me to continually study and engage in activities every day.
+        While I enjoy contributing to projects as a full-stack developer, my
+        greatest passion lies in front-end development, where I take on the
+        responsibility of connecting users with APIs. I particularly enjoy
+        collaborating with designers to create beautiful UI interfaces, as well
+        as designing and developing reusable components and logic. In addition,
+        I have experience in back-end development using Laravel and
+        infrastructure building centered on AWS, leveraging my previous
+        experience as a network engineer. These opportunities have allowed me to
+        gain a wide range of expertise across different projects.
       </TyText>
-      <TyText size="md">
-        I initially began my career in the music industry but transitioned to becoming a web developer, where I have built full-stack development experience, focusing mainly on the front-end.
-      </TyText>
-    </TyDiv>
-    <TyDiv>
-      <TyText size="md" isBold>
-        I am skilled at prioritizing tasks.
-      </TyText>
-      <TyText size="md">
-        I place a strong emphasis on deciding what not to do, allowing me to focus on my strengths and dedicate time to them, ultimately enhancing my performance. I believe that choosing not to do certain tasks creates a foundation for focusing on the essential ones.
-      </TyText>
-    </TyDiv>
-    <TyDiv>
-      <TyText size="md" isBold>
-        I avoid using overly strong expressions in communication.
-      </TyText>
-      <TyText size="md">
-        I believe text-based communication can often come across as cold or harsh. Therefore, I strive to keep my expressions simple yet soft. When necessary, I also provide context or background to my statements to minimize misunderstandings.
-      </TyText>
-    </TyDiv>
-    <TyText size="md">Thank you for your time and consideration!🙇‍♂️</TyText>
-  </TyBlock>
+      <TyText size="md"> Here are three traits that define me: </TyText>
+      <TyDiv>
+        <TyText size="md" isBold>
+          I am highly curious and take initiative.
+        </TyText>
+        <TyText size="md">
+          I enjoy exploring and experiencing new, unfamiliar things, which
+          drives me to continually study and engage in activities every day.
+        </TyText>
+        <TyText size="md">
+          I initially began my career in the music industry but transitioned to
+          becoming a web developer, where I have built full-stack development
+          experience, focusing mainly on the front-end.
+        </TyText>
+      </TyDiv>
+      <TyDiv>
+        <TyText size="md" isBold> I am skilled at prioritizing tasks. </TyText>
+        <TyText size="md">
+          I place a strong emphasis on deciding what not to do, allowing me to
+          focus on my strengths and dedicate time to them, ultimately enhancing
+          my performance. I believe that choosing not to do certain tasks
+          creates a foundation for focusing on the essential ones.
+        </TyText>
+      </TyDiv>
+      <TyDiv>
+        <TyText size="md" isBold>
+          I avoid using overly strong expressions in communication.
+        </TyText>
+        <TyText size="md">
+          I believe text-based communication can often come across as cold or
+          harsh. Therefore, I strive to keep my expressions simple yet soft.
+          When necessary, I also provide context or background to my statements
+          to minimize misunderstandings.
+        </TyText>
+      </TyDiv>
+      <TyText size="md">Thank you for your time and consideration!🙇‍♂️</TyText>
+    </TyBlock>
   </TySection>
 </TyLayout>
