--- a/src/pages/ja/contact/index.astro
+++ b/src/pages/ja/contact/index.astro
@@ -10,12 +10,16 @@ import TySection from "@/layouts/TySection.astro";
   <TySection heading="連絡先やSNSアカウント一覧">
     <TyBlock heading="メールアドレス" layout="stack">
       <TyText size="md">
-        <TyTextLink href="mailto:toru45s@gmail.com">toru45s@gmail.com</TyTextLink>
-      </Text>
+        <TyTextLink href="mailto:toru45s@gmail.com"
+          >toru45s@gmail.com</TyTextLink
+        >
+      </TyText>
     </TyBlock>
     <TyBlock heading="SNS" layout="stack">
       <TyTextLink href="https://github.com/t-yaginuma">github</TyTextLink>
-      <TyTextLink href="https://www.linkedin.com/in/toru-yaginuma-8124a8277/">linkedin</TyTextLink>
+      <TyTextLink href="https://www.linkedin.com/in/toru-yaginuma-8124a8277/"
+        >linkedin</TyTextLink
+      >
     </TyBlock>
   </TySection>
 </TyLayout>
