--- a/src/pages/ja/works/index.astro
+++ b/src/pages/ja/works/index.astro
@@ -10,8 +10,12 @@ import TyDiv from "@/layouts/TyDiv.astro";
   <TySection heading="実装を担当したWebサイト">
     <TyDiv>
       <TyText size="md">公開可能な実績のみ掲載しております。</TyText>
-      <TyText size="md">非公開案件などの実績は、別途スキルシートをご確認いただけますと幸いです。</TyText>
-      <TyText size="md">なおスキルシートへリンクは、本サイトに掲載しておりません。</TyText>
+      <TyText size="md"
+        >非公開案件などの実績は、別途スキルシートをご確認いただけますと幸いです。</TyText
+      >
+      <TyText size="md"
+        >なおスキルシートへリンクは、本サイトに掲載しておりません。</TyText
+      >
     </TyDiv>
     <TyWorks />
   </TySection>
