--- a/src/pages/works/index.astro
+++ b/src/pages/works/index.astro
@@ -9,9 +9,17 @@ import TyDiv from "@/layouts/TyDiv.astro";
 <TyLayout title="Works" currentPage="works" headingPage="Works" lang="en">
   <TySection heading="Works">
     <TyDiv>
-      <TyText size="md">Only publicly available achievements are listed here.</TyText>
-      <TyText size="md">For accomplishments related to private projects, please refer to the skill sheet.</TyText>
-      <TyText size="md">Please note that the link to the skill sheet is not provided on this website.</TyText>
+      <TyText size="md"
+        >Only publicly available achievements are listed here.</TyText
+      >
+      <TyText size="md"
+        >For accomplishments related to private projects, please refer to the
+        skill sheet.</TyText
+      >
+      <TyText size="md"
+        >Please note that the link to the skill sheet is not provided on this
+        website.</TyText
+      >
     </TyDiv>
     <TyWorks />
   </TySection>
