--- a/src/components/TyHeading.astro
+++ b/src/components/TyHeading.astro
@@ -7,7 +7,11 @@ export interface Props {
 const { type = "section", text } = Astro.props;
 ---
 
-{type === "page" && <h1 class:list={["ty-heading ty-heading--page"]}>{text}</h1>}
+{
+  type === "page" && (
+    <h1 class:list={["ty-heading ty-heading--page"]}>{text}</h1>
+  )
+}
 
 {
   type === "section" && (
@@ -15,7 +19,11 @@ const { type = "section", text } = Astro.props;
   )
 }
 
-{type === "block" && <h3 class:list={["ty-heading ty-heading--block"]}>{text}</h3>}
+{
+  type === "block" && (
+    <h3 class:list={["ty-heading ty-heading--block"]}>{text}</h3>
+  )
+}
 
 {
   type === "sub-block" && (
