--- a/src/layouts/TyLayout.astro
+++ b/src/layouts/TyLayout.astro
@@ -3,13 +3,12 @@ import TyHead from "@/components/TyHead.astro";
 import TyHeading from "@/components/TyHeading.astro";
 import TyLanguage from "@/components/TyLanguage.astro";
 import TyNavigation from "@/components/TyNavigation.astro";
-import TyDiv from "./TyDiv.astro";
 
 export interface Props {
   title: string;
   currentPage: "works" | "top" | "contact";
   headingPage?: string;
-  lang?: "ja" | "en";
+  lang: "ja" | "en";
 }
 
 const { title, currentPage, headingPage, lang } = Astro.props;
