--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -16,7 +16,7 @@ import TySection from "@/layouts/TySection.astro";
       </TyText>
     </TyBlock>
     <TyBlock heading="Social media" layout="stack">
-      <TyTextLink href="https://github.com/t-yaginuma">github</TyTextLink>
+      <TyTextLink href="https://github.com/toru45s">github</TyTextLink>
       <TyTextLink href="https://www.linkedin.com/in/toru-yaginuma-8124a8277/"
         >linkedin</TyTextLink
       >
