--- a/src/pages/works/index.astro
+++ b/src/pages/works/index.astro
@@ -21,6 +21,6 @@ import TyDiv from "@/layouts/TyDiv.astro";
         website.</TyText
       >
     </TyDiv>
-    <TyWorks />
+    <TyWorks isHideComments />
   </TySection>
 </TyLayout>
