--- a/src/layouts/TyLayout.astro
+++ b/src/layouts/TyLayout.astro
@@ -15,7 +15,7 @@ const { title, currentPage, headingPage, lang } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="ja">
+<html lang={lang}>
   <TyHead title={`${title ? title + " |" : ""} Toru Yaginuma Portfolio Site`} />
   <body>
     <div class="ty-layout">
