--- a/src/components/TyWork.astro
+++ b/src/components/TyWork.astro
@@ -8,7 +8,7 @@ export interface Props {
   title: string;
   role: string;
   href: string;
-  comment: string | null;
+  comment?: string;
 }
 
 const { image, href, title, role, comment } = Astro.props;
